# canvas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: aida-project-context.yml
.claude/skills/project-context/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
canvas/: __init__.py  cli.py  config.py  core.py  exceptions.py  iterm2.py  models.py  registry.py  slug.py  template.py
docs/architecture/: README.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_core_api.py  test_core_session_mgmt.py  test_exceptions.py  test_models.py  test_registry.py  test_security.py  test_slug.py  test_template.py
