[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakensoul-canvas"
version = "0.1.0"
description = "CLI + library for managing ephemeral org-aware Claude Code workspaces"
requires-python = ">=3.11"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
canvas = "canvas.cli:cli"
