[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakensoul-canvas"
version = "0.1.0"
description = "CLI + library for managing ephemeral org-aware Claude Code workspaces"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Robert Gunnar Johnson Jr.", email = "github@oakensoul.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "cyclonedx-bom>=4.0",
    "mypy>=1.10,<2.0",
    "pip-audit>=2.7",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11,<1.0",
    "twine>=5.0",
]

[project.scripts]
canvas = "canvas.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "S"]

[tool.ruff.lint.isort]
known-first-party = ["canvas"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["canvas"]

[tool.coverage.report]
show_missing = true
fail_under = 95
